--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
   <a href="mypetboy/home.html">My Pet Boy</a>
   <a href="growingminds/home.html">Growing Minds Academy</a>
   <a href="nxhealth/nxhealthhome.html">NXhealth</a>
+  <a href="blueroan/home.html">Blue Roan Bar & Grill</a>
 </body>
 </html>
