--- a/nxhealth/nxhealthhome.html
+++ b/nxhealth/nxhealthhome.html
@@ -82,7 +82,9 @@
     <div class="main-content">
       <div class="text-column">
         <div class="textbox">
+		<a href="fanclub.html">
           <img src="../assets/fanclub_textbox.png" alt="Fanclub">
+		  </a>
           <p>Join the most elite fan network in the world. Perks include insider NXH drops, surprise deliveries, and direct messages from corporate leadership.</p>
         </div>
         <div class="textbox">
@@ -92,7 +94,9 @@
           <p>Introducing NXTreme Milk: the only sports milk with 600mg of caffeine. Available in Vanilla, Bloody Vanilla, and Bovine Cream Pie.</p>
         </div>
         <div class="textbox">
+		<a href="meettheceo.html">
           <img src="../assets/meettheceo_textbox.png" alt="Meet the CEO">
+		</a>
           <p>Alfred Sacksman, innovator and former scientist of the Amazon. Creator of God Milk. Believer in a brighter tomorrow through genetic milk optimization.</p>
         </div>
       </div>
