--- a/nxhealth/newproducts.html
+++ b/nxhealth/newproducts.html
@@ -52,7 +52,7 @@
     }
     .product-text {
       flex-grow: 1;
-      font-size: 1em;
+      font-size: 0.7em;
     }
     .product-img {
       width: 100px;
@@ -69,7 +69,7 @@
     <div class="product-row">
       <img src="../assets/BrazenBullSpin.gif" class="product-gif" alt="Brazen Bull">
       <div class="product-bg">
-        <div class="product-text">Brazen bull placeholder</div>
+        <div class="product-text">NOT FOR TIMID DRIBBLING PUSSIES! New from NXHealth comes BRAZEN BULL. The ULTIMATE SMELLING SALTS that will raise your max bench by 400lbs in one WEEK GUARANTEED. And if it doesn’t do that YOU CAN FUCK MY WIFE! YOU HEARD ME MORON (WHAT’RE YOU DEAF?), IF YOU AREN’T LIFTING 400 OR MORE LBS BY NEXT WEEK YOU CAN FUCK MY GODDAMN WIFE ABOUT IT! BECAUSE IF BRAZEN BULL DOESN’T WORK FOR YOU, I’M FUCKED SIX WAYS FROM SUNDAY! ORDER NOW!!!</div>
         <img src="../assets/NX_product_brazenbull.JPG" class="product-img" alt="Brazen Bull Product">
       </div>
     </div>
@@ -78,7 +78,7 @@
     <div class="product-row">
       <img src="../assets/EggnogSpin.gif" class="product-gif" alt="Eggnog Edition">
       <div class="product-bg">
-        <div class="product-text">Udder Buster Holiday Edition: Eggnog placeholder</div>
+        <div class="product-text">HO-HO-HOLYYY SHIT! Your favorite drink just got a festive NEW twist… If you see Santa kissing mother this year, one swig of this will give you the strength to TEAR HIS FUCKING THROAT OUT. NEW from NXHealth, start your winter arc strong with the beverage that could kill the abominable snowman! 500mg OF HARD CORE TAURUS CAFFEINE extracted from the REAL TESTICLES of a SPANISH BULL. 1000mg of TAURINE for the mental EDGE you need. And 110 proof peppermint schnapps to keep you HOT AS THE COALS OF HELL in the FRIGID WITCH TIT LEVEL COLD. MERRY CHRISTMAS YA FILTHY ANIMAL. Try it today!</div>
         <img src="../assets/NX_product_eggnog.JPG" class="product-img" alt="Eggnog Product">
       </div>
     </div>
