--- a/growingminds/assessment.html
+++ b/growingminds/assessment.html
@@ -48,6 +48,11 @@
       height: auto;
       margin-right: 20px;
     }
+	.startscreen img {
+      width: 300px;
+      height: auto;
+      margin-right: 20px;
+    }
     .result-message {
       font-size: 1.2em;
       background: #e0e0e0;
@@ -78,6 +83,8 @@
     <div id="start-screen">
       <h1>Growing Minds Diagnostic Quiz</h1>
       <button onclick="startQuiz()">Begin Test</button>
+      <img src="../assets/vaseyfriends.gif" class="startscreen-img" alt="Start Image">
+	  <p> Vasey and his friends will help your child walk through some hypothetical scenarios in order to get a better understanding of their cognitive and behavioral state. Please click begin test and then walk through each question with your child. </p>
     </div>
     <div id="quiz-screen" class="hidden">
       <img id="question-img" class="question-img" src="" alt="Question Image">
