--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -25,6 +25,11 @@
     button:disabled {
       opacity: 0.3;
     }
+    #statusText {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #0f0;
+    }
   </style>
 </head>
 <body>
@@ -38,99 +43,95 @@
     <button id="rightBtn">Right</button>
   </div>
 
+  <div id="statusText"></div>
+
   <script>
     const directions = ['N', 'E', 'S', 'W'];
     const maze = {
-      '1,1': ['S'],
-      '1,2': ['N', 'S'],
-      '1,3': ['N', 'S'],
-      '1,4': ['N', 'E'],
-      '1,5': ['S', 'E'],
-      '1,6': ['N'],
-      '2,1': ['E', 'S'],
-      '2,2': ['N', 'S'],
-      '2,3': ['N', 'S'],
-      '2,4': ['N', 'W', 'E'],
-      '2,5': ['W', 'E', 'S'],
-      '2,6': ['N', 'E'],
-      '3,1': ['W'],
-      '3,2': ['E', 'S'],
-      '3,3': ['N'],
-      '3,4': ['W', 'S', 'E'],
-      '3,5': ['N', 'W'],
-      '3,6': ['W', 'E'],
-      '4,1': ['E'],
-      '4,2': ['W', 'E'],
-      '4,3': ['E', 'S'],
-      '4,4': ['N', 'W'],
-      '4,5': ['E', 'S'],
-      '4,6': ['N', 'W'],
-      '5,1': ['W', 'E', 'S'],
-      '5,2': ['W', 'N', 'S'],
-      '5,3': ['N', 'W'],
-      '5,4': ['E', 'S'],
-      '5,5': ['W', 'N'],
-      '5,6': ['E'],
-      '6,1': ['W', 'S'],
-      '6,2': ['N', 'S'],
-      '6,3': ['N', 'S'],
-      '6,4': ['W', 'N', 'S'],
-      '6,5': ['N', 'S'],
-      '6,6': ['N', 'W']
+      '1,1': ['S'], '1,2': ['N', 'S'], '1,3': ['N', 'S'], '1,4': ['N', 'E'], '1,5': ['S', 'E'], '1,6': ['N'],
+      '2,1': ['E', 'S'], '2,2': ['N', 'S'], '2,3': ['N', 'S'], '2,4': ['N', 'W', 'E'], '2,5': ['W', 'E', 'S'], '2,6': ['N', 'E'],
+      '3,1': ['W'], '3,2': ['E', 'S'], '3,3': ['N'], '3,4': ['W', 'S', 'E'], '3,5': ['N', 'W'], '3,6': ['W', 'E'],
+      '4,1': ['E'], '4,2': ['W', 'E'], '4,3': ['E', 'S'], '4,4': ['N', 'W'], '4,5': ['E', 'S'], '4,6': ['N', 'W'],
+      '5,1': ['W', 'E', 'S'], '5,2': ['W', 'N', 'S'], '5,3': ['N', 'W'], '5,4': ['E', 'S'], '5,5': ['W', 'N'], '5,6': ['E'],
+      '6,1': ['W', 'S'], '6,2': ['N', 'S'], '6,3': ['N', 'S'], '6,4': ['W', 'N', 'S'], '6,5': ['N', 'S'], '6,6': ['N', 'W']
     };
 
     let position = { col: 4, row: 6 }; // START at 4,6
     let facing = 'N';
+    let previousState = null;
 
-	function updateView() {
-	  const view = document.getElementById('mazeView');
-	  const filename = `${position.col}.${position.row}.${facing}.gif`;
-	  view.src = filename;
+    async function updateView() {
+      const view = document.getElementById('mazeView');
+      const toCol = position.col;
+      const toRow = position.row;
+      const toFacing = facing;
 
-	  const cellKey = `${position.col},${position.row}`;
-	  const available = maze[cellKey] || [];
+      let filename = `${toCol}.${toRow}.${toFacing}.gif`;
 
-	  const fIndex = directions.indexOf(facing);
-	  const left = directions[(fIndex + 3) % 4];
-	  const right = directions[(fIndex + 1) % 4];
-	  const forward = facing;
+      if (previousState) {
+        const [fromCol, fromRow, fromFacing] = previousState;
+        const transitionName = `${fromCol}.${fromRow}.${fromFacing}_to_${toCol}.${toRow}.${toFacing}.gif`;
 
-	  document.getElementById('leftBtn').disabled = !available.includes(left);
-	  document.getElementById('rightBtn').disabled = !available.includes(right);
-	  document.getElementById('forwardBtn').disabled = !available.includes(forward);
-	}
+        try {
+          const response = await fetch(transitionName, { method: 'HEAD' });
+          if (response.ok) {
+            filename = transitionName;
+          }
+        } catch (e) {
+          // fallback silently
+        }
+      }
 
-	function moveForward() {
-	  switch (facing) {
-		case 'N': position.row--; break;
-		case 'S': position.row++; break;
-		case 'E': position.col++; break;
-		case 'W': position.col--; break;
-	  }
-	  updateView();
-	}
+      view.src = filename;
+
+      const cellKey = `${toCol},${toRow}`;
+      const available = maze[cellKey] || [];
+
+      const fIndex = directions.indexOf(toFacing);
+      const left = directions[(fIndex + 3) % 4];
+      const right = directions[(fIndex + 1) % 4];
+      const forward = toFacing;
+
+      document.getElementById('leftBtn').disabled = !available.includes(left);
+      document.getElementById('rightBtn').disabled = !available.includes(right);
+      document.getElementById('forwardBtn').disabled = !available.includes(forward);
+
+      document.getElementById('statusText').textContent = `Current Position: (${toCol}, ${toRow}) Facing: ${toFacing}`;
+
+      previousState = [toCol, toRow, toFacing];
+    }
+
+    function moveForward() {
+      switch (facing) {
+        case 'N': position.row--; break;
+        case 'S': position.row++; break;
+        case 'E': position.col++; break;
+        case 'W': position.col--; break;
+      }
+      updateView();
+    }
 
     function turnLeft() {
       const i = directions.indexOf(facing);
       facing = directions[(i + 3) % 4];
-	  switch (facing) {
-		case 'N': position.row--; break;
-		case 'S': position.row++; break;
-		case 'E': position.col++; break;
-		case 'W': position.col--; break;
-	  }
+      switch (facing) {
+        case 'N': position.row--; break;
+        case 'S': position.row++; break;
+        case 'E': position.col++; break;
+        case 'W': position.col--; break;
+      }
       updateView();
     }
 
     function turnRight() {
       const i = directions.indexOf(facing);
       facing = directions[(i + 1) % 4];
-	  switch (facing) {
-		case 'N': position.row--; break;
-		case 'S': position.row++; break;
-		case 'E': position.col++; break;
-		case 'W': position.col--; break;
-	  }
+      switch (facing) {
+        case 'N': position.row--; break;
+        case 'S': position.row++; break;
+        case 'E': position.col++; break;
+        case 'W': position.col--; break;
+      }
       updateView();
     }
 
@@ -138,7 +139,7 @@
     document.getElementById('leftBtn').onclick = turnLeft;
     document.getElementById('rightBtn').onclick = turnRight;
 
-    updateView(); // Initial view
+    updateView();
   </script>
 
 </body>
