--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -59,6 +59,17 @@
     let position = { col: 4, row: 6 }; // START at 4,6
     let facing = 'N';
     let previousState = null;
+    const imageCache = {};
+
+    async function preloadImage(src) {
+      if (imageCache[src]) return imageCache[src];
+      return new Promise((resolve) => {
+        const img = new Image();
+        img.onload = () => resolve(imageCache[src] = src);
+        img.onerror = () => resolve(null);
+        img.src = src;
+      });
+    }
 
     async function updateView() {
       const view = document.getElementById('mazeView');
@@ -71,15 +82,14 @@
       if (previousState) {
         const [fromCol, fromRow, fromFacing] = previousState;
         const transitionName = `${fromCol}.${fromRow}.${fromFacing}_to_${toCol}.${toRow}.${toFacing}.gif`;
-
-        try {
-          const response = await fetch(transitionName, { method: 'HEAD' });
-          if (response.ok) {
-            filename = transitionName;
-          }
-        } catch (e) {
-          // fallback silently
+        const transitionPreload = await preloadImage(transitionName);
+        if (transitionPreload) {
+          filename = transitionName;
+        } else {
+          await preloadImage(filename); // preload fallback too
         }
+      } else {
+        await preloadImage(filename);
       }
 
       view.src = filename;
