--- a/allennella/mirrorDEMO/mirrormazedemo_gifs.html
+++ b/allennella/mirrorDEMO/mirrormazedemo_gifs.html
@@ -30,6 +30,13 @@
       font-size: 18px;
       color: #0f0;
     }
+    #controls {
+      transition: opacity 0.3s;
+    }
+    #controls.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
   </style>
 </head>
 <body>
@@ -37,7 +44,7 @@
   <h1>Mirror Maze Demo</h1>
   <img id="mazeView" src="" alt="Maze View"/>
 
-  <div>
+  <div id="controls">
     <button id="leftBtn">Left</button>
     <button id="forwardBtn">Forward</button>
     <button id="rightBtn">Right</button>
@@ -58,9 +65,9 @@
 
     let position = { col: 4, row: 6 }; // START at 4,6
     let facing = 'N';
-    let isPaused = false;
+    let previousState = null;
 
-    async function updateView(fromState = null) {
+    async function updateView() {
       const view = document.getElementById('mazeView');
       const toCol = position.col;
       const toRow = position.row;
@@ -68,9 +75,10 @@
 
       let filename = `${toCol}.${toRow}.${toFacing}.gif`;
 
-      if (fromState) {
-        const [fromCol, fromRow, fromFacing] = fromState;
+      if (previousState) {
+        const [fromCol, fromRow, fromFacing] = previousState;
         const transitionName = `${fromCol}.${fromRow}.${fromFacing}_to_${toCol}.${toRow}.${toFacing}.gif`;
+
         try {
           const response = await fetch(transitionName, { method: 'HEAD' });
           if (response.ok) {
@@ -82,10 +90,6 @@
       }
 
       view.src = filename;
-      await new Promise(resolve => {
-        view.onload = () => resolve();
-        view.onerror = () => resolve();
-      });
 
       const cellKey = `${toCol},${toRow}`;
       const available = maze[cellKey] || [];
@@ -95,60 +99,56 @@
       const right = directions[(fIndex + 1) % 4];
       const forward = toFacing;
 
-      document.getElementById('leftBtn').disabled = !available.includes(left) || isPaused;
-      document.getElementById('rightBtn').disabled = !available.includes(right) || isPaused;
-      document.getElementById('forwardBtn').disabled = !available.includes(forward) || isPaused;
+      document.getElementById('leftBtn').disabled = !available.includes(left);
+      document.getElementById('rightBtn').disabled = !available.includes(right);
+      document.getElementById('forwardBtn').disabled = !available.includes(forward);
 
       document.getElementById('statusText').textContent = `Current Position: (${toCol}, ${toRow}) Facing: ${toFacing}`;
+
+      previousState = [toCol, toRow, toFacing];
     }
 
-    async function performMove(updateFn) {
-      if (isPaused) return;
-      isPaused = true;
-      const currentState = [position.col, position.row, facing];
-      updateFn();
-      await updateView(currentState);
-      setTimeout(() => {
-        isPaused = false;
-        updateView();
-      }, 5000);
+    function temporarilyHideControls() {
+      const controls = document.getElementById('controls');
+      controls.classList.add('hidden');
+      setTimeout(() => controls.classList.remove('hidden'), 4000);
     }
 
     function moveForward() {
-      performMove(() => {
-        switch (facing) {
-          case 'N': position.row--; break;
-          case 'S': position.row++; break;
-          case 'E': position.col++; break;
-          case 'W': position.col--; break;
-        }
-      });
+      switch (facing) {
+        case 'N': position.row--; break;
+        case 'S': position.row++; break;
+        case 'E': position.col++; break;
+        case 'W': position.col--; break;
+      }
+      updateView();
+      temporarilyHideControls();
     }
 
     function turnLeft() {
-      performMove(() => {
-        const i = directions.indexOf(facing);
-        facing = directions[(i + 3) % 4];
-        switch (facing) {
-          case 'N': position.row--; break;
-          case 'S': position.row++; break;
-          case 'E': position.col++; break;
-          case 'W': position.col--; break;
-        }
-      });
+      const i = directions.indexOf(facing);
+      facing = directions[(i + 3) % 4];
+      switch (facing) {
+        case 'N': position.row--; break;
+        case 'S': position.row++; break;
+        case 'E': position.col++; break;
+        case 'W': position.col--; break;
+      }
+      updateView();
+      temporarilyHideControls();
     }
 
     function turnRight() {
-      performMove(() => {
-        const i = directions.indexOf(facing);
-        facing = directions[(i + 1) % 4];
-        switch (facing) {
-          case 'N': position.row--; break;
-          case 'S': position.row++; break;
-          case 'E': position.col++; break;
-          case 'W': position.col--; break;
-        }
-      });
+      const i = directions.indexOf(facing);
+      facing = directions[(i + 1) % 4];
+      switch (facing) {
+        case 'N': position.row--; break;
+        case 'S': position.row++; break;
+        case 'E': position.col++; break;
+        case 'W': position.col--; break;
+      }
+      updateView();
+      temporarilyHideControls();
     }
 
     document.getElementById('forwardBtn').onclick = moveForward;
